--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "description": "Svelte implementation of the RealWorld app",
   "version": "0.0.1",
   "scripts": {
-    "dev": "node server.js",
-    "build": "sapper build",
-    "start": "cross-env NODE_ENV=production node server.js",
+    "dev": "sapper dev",
+    "prestage": "sapper build",
+    "start": "sapper start",
     "cy:run": "cypress run",
     "cy:open": "cypress open",
     "test": "run-p --race dev cy:run",
@@ -15,35 +15,25 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
-    "cross-env": "^5.1.1",
-    "css-loader": "^0.28.7",
-    "express": "^4.16.2",
+    "cross-env": "^5.1.3",
     "express-session": "^1.15.6",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "glob": "^7.1.2",
-    "marked": "^0.3.9",
-    "node-fetch": "^1.7.3",
+    "marked": "^0.3.17",
+    "node-fetch": "^2.0.0",
     "npm-run-all": "^4.1.2",
-    "sapper": "^0.3.1",
+    "polka": "^0.3.4",
+    "sapper": "^0.9.4",
     "serve-static": "^1.13.1",
     "session-file-store": "^1.2.0",
-    "style-loader": "^0.19.0",
-    "svelte": "^1.49.1",
+    "svelte": "^1.56.0",
     "svelte-extras": "^1.6.0",
-    "svelte-loader": "^2.3.1",
-    "uglifyjs-webpack-plugin": "^1.1.2",
-    "webpack": "^3.10.0"
+    "svelte-loader": "^2.3.3",
+    "webpack": "^4.1.0"
   },
   "now": {
     "alias": "svelte-realworld.now.sh",
     "files": [
       "assets",
-      "routes",
-      "templates",
-      "server.js",
-      "webpack.client.config.js",
-      "webpack.server.config.js",
-      "yarn.lock"
+      "build"
     ]
   }
 }
