--- a/package.json
+++ b/package.json
@@ -13,34 +13,34 @@
     "deploy": "make deploy"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "compression": "^1.7.1",
-    "express-session": "^1.16.2",
-    "marked": "^0.6.2",
-    "node-fetch": "^2.1.2",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "express-session": "^1.17.1",
+    "marked": "^1.0.0",
+    "node-fetch": "^2.6.0",
     "polka": "^0.5.2",
-    "session-file-store": "^1.2.0",
+    "session-file-store": "^1.4.0",
     "sirv": "^0.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.5",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/preset-env": "^7.1.5",
-    "@babel/runtime": "^7.1.5",
-    "chokidar": "^3.0.1",
-    "cypress": "^3.3.1",
-    "npm-run-all": "^4.1.2",
-    "rollup": "^1.15.1",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-node-resolve": "^5.0.1",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-svelte": "^5.1.0",
-    "rollup-plugin-terser": "^5.0.0",
-    "sapper": "^0.27.8",
-    "svelte": "^3.12.1",
-    "svelte-loader": "^2.13.4"
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/runtime": "^7.9.6",
+    "chokidar": "^3.4.0",
+    "cypress": "^4.5.0",
+    "npm-run-all": "^4.1.5",
+    "@rollup/plugin-commonjs": "11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.3",
+    "@rollup/plugin-replace": "^2.3.2",
+    "rollup": "^2.10.0",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-svelte": "^5.2.1",
+    "rollup-plugin-terser": "^5.3.0",
+    "sapper": "^0.27.13",
+    "svelte": "^3.22.2",
+    "svelte-loader": "^2.13.6"
   },
   "now": {
     "alias": "svelte-realworld.now.sh",
