--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.5",
     "@babel/runtime": "^7.1.5",
+    "@rollup/plugin-babel": "^5.0.0",
     "@rollup/plugin-commonjs": "^13.0.0",
     "@rollup/plugin-node-resolve": "^8.0.1",
     "@rollup/plugin-replace": "^2.3.3",
@@ -35,12 +36,10 @@
     "cypress": "^3.3.1",
     "npm-run-all": "^4.1.2",
     "rollup": "^2.10.0",
-    "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-svelte": "^5.1.0",
     "rollup-plugin-terser": "^5.0.0",
     "sapper": "^0.27.15",
-    "svelte": "^3.12.1",
-    "svelte-loader": "^2.13.4"
+    "svelte": "^3.12.1"
   },
   "now": {
     "alias": "svelte-realworld.now.sh",
