Revert "attempt to change the node space up to 16GB"
This reverts commit dd8d4e74d2432306a1c2463dcba22ed6f4d1415a.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "svelte-kit dev",
-    "build": "NODE_OPTIONS=--max_old_space_size=16384 svelte-kit build",
+    "build": "svelte-kit build --verbose",
     "preview": "svelte-kit preview"
   },
   "devDependencies": {
