--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-auto": "^1.0.0-next.64",
 		"@sveltejs/kit": "1.0.0-next.405",
 		"marked": "^4.0.0",
 		"prettier": "^2.6.2",
