--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-vercel": "1.0.0-next.81",
 		"@sveltejs/kit": "next",
 		"marked": "^4.0.0",
 		"prettier": "^2.6.2",
