--- a/package.json
+++ b/package.json
@@ -15,12 +15,10 @@
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/adapter-vercel": "1.0.0-next.81",
 		"@sveltejs/kit": "next",
-		"marked": "^4.0.0",
-		"prettier": "^2.6.2",
-		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "^3.49.0"
-	},
-	"dependencies": {
-		"cookie": "^0.5.0"
+		"marked": "^4.2.1",
+		"prettier": "^2.7.1",
+		"prettier-plugin-svelte": "^2.8.0",
+		"svelte": "^3.52.0",
+		"vite": "^3.2.2"
 	}
 }
