--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,23 @@
-.DS_Store
-/node_modules
-/build
-/.netlify
+node_modules
+
+# Output
+.output
+.vercel
+.netlify
+.wrangler
 /.svelte-kit
-/.vercel
+/build
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Env
+.env
+.env.*
+!.env.example
+!.env.test
+
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
